# avantage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/avantage/: __init__.py  _parsers.py  _types.py  client.py  config.py  exceptions.py  rate_limiter.py
src/avantage/api/: analytics.py  calendar.py  commodities.py  crypto.py  economic.py  equity.py  forex.py  fundamentals.py  indicators.py  intelligence.py  options.py
src/avantage/models/: __init__.py  commodities.py  common.py  crypto.py  economic.py  equity.py  forex.py  fundamentals.py  indicators.py  intelligence.py  options.py
tests/: conftest.py  test_analytics.py  test_calendar.py  test_client.py  test_commodities.py  test_config.py  test_crypto.py  test_economic.py  test_equity.py  test_forex.py  test_fundamentals.py  test_indicators.py  test_intelligence.py  test_options.py
